Bug 437885 - different click behavior in Add Application's selecting a program vs. browsing
Summary: different click behavior in Add Application's selecting a program vs. browsing
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: git master
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-05-31 01:48 UTC by skierpage
Modified: 2021-06-03 18:03 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.83
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description skierpage 2021-05-31 01:48:47 UTC
SUMMARY
In kcm_autostart's +Add Application... Choose Application dialog, you have to double-click to open the categories and choose a program, but if you browse the file system, a single click opens folders and chooses an application (if you haven't changed KDE's General Behavior "Clicking files or folders").

STEPS TO REPRODUCE
1. Run System Settings > Startup and Shutdown > Autostart, click [+ Add...] > [+Add Application...]
2. Choose a program by navigating the categories
3. Cancel and repeat, this time choosing a program by browsing the file system.

OBSERVED RESULT
Navigating the categories requires double-clicking to open a category and to select a program, even if Systems Settings > Workspace Behavior > General Behavior is "Clicking files or folders" "Opens them" which is the default.

EXPECTED RESULT
Category navigation should match the "Clicking files of folders" behavior from General Behavior.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.21.5
KDE Frameworks Version: 5.82.0
Qt Version: 5.15.2 , 64-bit Wayland

ADDITIONAL INFORMATION
The Choose Application dialog is implemented by kio which seems to hardcode the double-click behavior, https://invent.kde.org/frameworks/kio/-/blob/master/src/widgets/kopenwithdialog.cpp#L736 . I don't know what other compoments use this KOpenWithDialog() dialog.
Comment 1 Nicolas Fella 2021-05-31 14:10:47 UTC
Expanding the categories on single click seems reasonable to me
Comment 2 Bug Janitor Service 2021-06-03 10:48:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/468
Comment 3 Ahmad Samir 2021-06-03 18:03:13 UTC
Git commit e2ea079f3a1634c847ffec2589ecc6e2b1737cdd by Ahmad Samir.
Committed on 03/06/2021 at 18:02.
Pushed by ahmadsamir into branch 'master'.

KOpenWithDialog: expand category on selection

When a user selects a category in the dialog, it should be expanded.
FIXED-IN: 5.83

M  +11   -7    src/widgets/kopenwithdialog.cpp

https://invent.kde.org/frameworks/kio/commit/e2ea079f3a1634c847ffec2589ecc6e2b1737cdd