KOpenWithDialog: expand category on selection

When a user selects a category in the dialog, it should be expanded.

BUG: 437885
FIXED-IN: 5.83